<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/item_one"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:textSize="22sp"
        android:textColor="@color/tx_grey"
        android:id="@+id/text_register" />

    <EditText
        android:inputType="phone"
        android:textColor="@color/tx_grey"
        android:background="@drawable/grey_round"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/number"
        android:hint="@string/number"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/black_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_register" />

    <EditText
        android:inputType="textPassword"
        android:textColor="@color/tx_grey"
        android:background="@drawable/grey_round"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/hint_password"
        android:id="@+id/password_reg"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/black_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <EditText
        android:inputType="textPassword"
        android:textColor="@color/tx_grey"
        android:background="@drawable/grey_round"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/password_repeat"
        android:hint="@string/password_repeat"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/black_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_reg" />

    <Button
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/but_selector"
        android:id="@+id/next"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:textColor="@color/tx_grey"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>




</androidx.constraintlayout.widget.ConstraintLayout>