<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/text_check"
        />
    <EditText
        android:textColor="@color/tx_grey"
        android:background="@drawable/grey_round"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="2dp"
        android:hint="@string/code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/text_check"
        android:inputType="phone"
        android:id="@+id/kod_check"/>



    <Button
        android:id="@+id/button_check_kod"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/enter"
        android:textColor="@color/tx_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kod_check" />

    <LinearLayout
        android:id="@+id/remember"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_check_kod">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember" />

        <CheckBox
            style="@style/CheckBoxRemember"
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>